--- a/app/src/main/res/layout/sp_fragment_job_detail.xml
+++ b/app/src/main/res/layout/sp_fragment_job_detail.xml
@@ -190,7 +190,7 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Assign"
+            android:text="Agree"
             android:textColor="@color/white"
             android:background="@color/teal"
             android:textSize="15dp"
