--- a/app/src/main/res/layout/fragment_job_detail.xml
+++ b/app/src/main/res/layout/fragment_job_detail.xml
@@ -67,6 +67,21 @@
         android:typeface="serif"
         android:text="@string/job_status" />
 
+        <TextView
+            android:id="@+id/daySegment"
+            android:layout_width="match_parent"
+            android:layout_height="20dp"
+            android:textColor="@color/teal"
+            android:gravity="top|left"
+            android:layout_gravity="top|left"
+            android:layout_margin="5dp"
+            android:layout_marginBottom="2dp"
+            android:background="@color/white"
+            android:textSize="15dp"
+            android:textStyle="normal"
+            android:typeface="serif"
+            android:text="@string/job_status" />
+
     <TextView
         android:id="@+id/customerName"
         android:layout_width="match_parent"
@@ -142,6 +157,21 @@
         android:typeface="serif"
         android:text="@string/pincode" />
 
+        <TextView
+            android:id="@+id/customer_preferred_date"
+            android:layout_width="match_parent"
+            android:layout_height="20dp"
+            android:textColor="@color/teal"
+            android:gravity="top|left"
+            android:layout_gravity="top|left"
+            android:layout_margin="5dp"
+            android:layout_marginBottom="2dp"
+            android:background="@color/white"
+            android:textSize="15dp"
+            android:textStyle="normal"
+            android:typeface="serif"
+            android:text="@string/customer_preferred_date" />
+
     <TextView
         android:id="@+id/dateinitiated"
         android:layout_width="match_parent"
@@ -199,6 +229,34 @@
         android:gravity="center|center"
         android:layout_gravity="bottom|right"
         android:id="@+id/cancel_button" />
+
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Agree"
+            android:textColor="@color/white"
+            android:background="@color/teal"
+            android:textSize="15dp"
+            android:textStyle="normal"
+            android:typeface="serif"
+            android:gravity="center|center"
+            android:layout_gravity="bottom|right"
+            android:id="@+id/agree_button" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Unassign"
+            android:textColor="@color/white"
+            android:background="@color/teal"
+            android:textSize="15dp"
+            android:textStyle="normal"
+            android:typeface="serif"
+            android:gravity="center|center"
+            android:layout_gravity="bottom|right"
+            android:id="@+id/unassign_button" />
+
 
     </LinearLayout>
 
