--- a/app/src/main/res/layout/sp_fragment_job_detail.xml
+++ b/app/src/main/res/layout/sp_fragment_job_detail.xml
@@ -68,6 +68,21 @@
             android:text="@string/job_status" />
 
         <TextView
+            android:id="@+id/daySegment"
+            android:layout_width="match_parent"
+            android:layout_height="20dp"
+            android:textColor="@color/teal"
+            android:gravity="top|left"
+            android:layout_gravity="top|left"
+            android:layout_margin="5dp"
+            android:layout_marginBottom="2dp"
+            android:background="@color/white"
+            android:textSize="15dp"
+            android:textStyle="normal"
+            android:typeface="serif"
+            android:text="@string/job_status" />
+
+        <TextView
             android:id="@+id/customerName"
             android:layout_width="match_parent"
             android:layout_height="20dp"
@@ -158,6 +173,21 @@
             android:text="@string/date_initiated" />
 
         <TextView
+            android:id="@+id/customer_preferred_date"
+            android:layout_width="match_parent"
+            android:layout_height="20dp"
+            android:textColor="@color/teal"
+            android:gravity="top|left"
+            android:layout_gravity="top|left"
+            android:layout_margin="5dp"
+            android:layout_marginBottom="2dp"
+            android:background="@color/white"
+            android:textSize="15dp"
+            android:textStyle="normal"
+            android:typeface="serif"
+            android:text="@string/customer_preferred_date" />
+
+        <TextView
             android:id="@+id/dateDone"
             android:layout_width="match_parent"
             android:layout_height="20dp"
@@ -190,7 +220,7 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Agree"
+            android:text="Assign"
             android:textColor="@color/white"
             android:background="@color/teal"
             android:textSize="15dp"
