Adding new features and bug fixes:
1. Job details page is trimmed
2. Gradle - support libraries upgraded
Bug fixes:

1. App crash while canceling jobs fixed

--- a/app/src/main/res/layout/activity_job_list.xml
+++ b/app/src/main/res/layout/activity_job_list.xml
@@ -1,7 +1,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:layout_marginLeft="16dp"
-    android:layout_marginRight="16dp" android:baselineAligned="false" android:background="#FFFFFF"
+    android:layout_height="match_parent" android:layout_marginLeft="0dp"
+    android:layout_marginRight="0dp" android:baselineAligned="false" android:background="#FFFFFF"
     android:divider="?android:attr/dividerVertical" android:orientation="vertical"
     android:showDividers="middle" android:id="@+id/job_list_container" tools:context=".JobListActivity">
 
@@ -51,6 +51,7 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:clickable="false"
         android:id="@+id/post_job_image"
         android:layout_gravity="center|top" />
 
