--- a/app/src/main/res/layout/sp_fragment_job_detail.xml
+++ b/app/src/main/res/layout/sp_fragment_job_detail.xml
@@ -68,20 +68,6 @@
                 android:typeface="serif"
                 android:text="@string/job_status" />
 
-            <TextView
-                android:id="@+id/daySegment"
-                android:layout_width="match_parent"
-                android:layout_height="20dp"
-                android:textColor="@color/teal"
-                android:gravity="top|left"
-                android:layout_gravity="top|left"
-                android:layout_margin="5dp"
-                android:layout_marginBottom="2dp"
-                android:background="@color/white"
-                android:textSize="15dp"
-                android:textStyle="normal"
-                android:typeface="serif"
-                android:text="@string/job_status" />
 
             <TextView
                 android:id="@+id/customerName"
@@ -113,6 +99,7 @@
                 android:typeface="serif"
                 android:text="@string/customer_phone_number" />
 
+        <!--
             <TextView
                 android:id="@+id/serviceproviderName"
                 android:layout_width="match_parent"
@@ -143,6 +130,7 @@
                 android:typeface="serif"
                 android:text="@string/service_provider_phone" />
 
+         -->
             <TextView
                 android:id="@+id/pincode"
                 android:layout_width="match_parent"
@@ -188,7 +176,22 @@
                 android:typeface="serif"
                 android:text="@string/customer_preferred_date" />
 
-            <TextView
+        <TextView
+            android:id="@+id/daySegment"
+            android:layout_width="match_parent"
+            android:layout_height="20dp"
+            android:textColor="@color/teal"
+            android:gravity="top|left"
+            android:layout_gravity="top|left"
+            android:layout_margin="5dp"
+            android:layout_marginBottom="2dp"
+            android:background="@color/white"
+            android:textSize="15dp"
+            android:textStyle="normal"
+            android:typeface="serif"
+            android:text="@string/day_segment" />
+
+        <TextView
                 android:id="@+id/dateDone"
                 android:layout_width="match_parent"
                 android:layout_height="20dp"
