--- a/app/src/main/res/layout-v20/custom_job_list.xml
+++ b/app/src/main/res/layout-v20/custom_job_list.xml
@@ -2,8 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:background="@drawable/white_linen_paper_texture"
-    android:layout_height="match_parent" android:layout_weight="1"
-    android:layout_gravity="top" android:gravity="top|center" android:layout_alignParentTop="true">
+    android:layout_height="match_parent">
 
     <ListView
         android:id="@+id/jobs"
@@ -11,8 +10,7 @@
         android:layout_height="70dp"
         android:divider="#008080"
         android:dividerHeight="4dp"
-        android:layout_gravity="top"
-        android:gravity="top|center"
+        android:elevation="50dp"
         android:background="@drawable/white_linen_paper_texture" />
 
     <!--   -->
