--- a/app/src/main/res/layout/activity_job_list.xml
+++ b/app/src/main/res/layout/activity_job_list.xml
@@ -1,73 +1,48 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:layout_marginLeft="0dp"
-    android:layout_marginRight="0dp" android:baselineAligned="false" android:background="#FFFFFF"
-    android:divider="?android:attr/dividerVertical" android:orientation="vertical"
-    android:showDividers="middle" android:id="@+id/job_list_container" tools:context=".JobListActivity">
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#FFFFFF"
+    android:divider="?android:attr/dividerVertical"
+    android:orientation="vertical"
+    android:showDividers="middle"
+    android:id="@+id/job_list_container_parent"
+    tools:context=".JobListActivity"
+    android:weightSum="1">
 
-    <!--android:background="@drawable/mint_green_paper"-->
+    <LinearLayout android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center|center"
+        android:layout_gravity="top|center"
+        android:id="@+id/job_list_container"
+        android:background="@color/white"
+        android:orientation="horizontal"
+        android:layout_weight="1">
 
-    <!--<fragment android:name="com.example.vengatr.consumer_services_android_20.UserDetailsFragment"
-        android:id="@+id/user_details_fragment"
-        android:layout_weight="2"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:layout="@layout/fragment_user_detail" />-->
 
-    <!--<fragment xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools" android:id="@+id/job_list"
-        android:name="com.example.vengatr.consumer_services_android_20.JobListFragment"
-        android:layout_width="match_parent" android:layout_height="match_parent"
-        android:layout_marginLeft="4dp" android:layout_marginRight="4dp"
-        android:layout_marginTop="16dp" android:layout_marginBottom="16dp"
-        tools:context=".JobListActivity" tools:layout="@android:layout/list_content" />
+    </LinearLayout>
 
-    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools" android:id="@+id/sp_job_list"
-        android:name="com.example.vengatr.consumer_services_android_20.ServiceProviderJobsPerspectiveFragment"
-        android:layout_width="match_parent" android:layout_height="match_parent"
-        android:layout_marginLeft="4dp" android:layout_marginRight="4dp"
-        android:layout_marginTop="16dp" android:layout_marginBottom="16dp"
-        tools:context=".JobListActivity" tools:layout="@android:layout/list_content" /> -->
-
-    <!--<RelativeLayout android:layout_width="fill_parent"
-        android:layout_height="fill_parent" android:gravity="bottom" android:layout_gravity="bottom">
-
+    <LinearLayout
+        android:id="@+id/post_job_button_container"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:gravity="bottom"
+        android:orientation="horizontal"
+        android:layout_weight="0">
         <Button
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Post Job"
+            android:text="Post New Job"
             android:textColor="@color/white"
             android:background="@color/teal"
-            android:textSize="15dp"
+            android:textSize="15sp"
             android:textStyle="normal"
             android:typeface="serif"
             android:gravity="center|center"
             android:layout_gravity="bottom"
             android:id="@+id/post_job_button" />
+    </LinearLayout>
 
-    </RelativeLayout>-->
-
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:clickable="false"
-        android:id="@+id/post_job_image"
-        android:layout_gravity="center|top" />
-
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:text="Post New Job"
-        android:textColor="@color/white"
-        android:background="@color/teal"
-        android:textSize="15sp"
-        android:textStyle="normal"
-        android:typeface="serif"
-        android:gravity="center|center"
-        android:layout_gravity="bottom|end"
-        android:id="@+id/post_job_button" />
-
-
-
-</FrameLayout>
+</LinearLayout>
