--- a/app/src/main/res/layout/activity_job_list.xml
+++ b/app/src/main/res/layout/activity_job_list.xml
@@ -11,6 +11,14 @@
     tools:context=".JobListActivity"
     android:weightSum="1">
 
+    <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/pager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </android.support.v4.view.ViewPager>
+
+
     <LinearLayout android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center|center"
