--- a/app/src/main/res/layout/selected_item.xml
+++ b/app/src/main/res/layout/selected_item.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:textStyle="normal"
     android:typeface="serif"
     android:textColor="@color/teal"
     android:background="@color/white"
+    android:divider="#008080"
+    android:dividerHeight="4dp"
     android:textSize="15sp">
 </TextView>
